<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/emoji"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/gameover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
        tools:srcCompat="@drawable/happy_smile"
        />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/coorect_answers_necessary_amount"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_your_score"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:id="@+id/tv_your_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/your_score"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
        app:layout_constraintBottom_toTopOf="@id/tv_required_persentage"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:id="@+id/tv_required_persentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/right_answers_necessary_persent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_score"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/right_answers_percent"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_required_persentage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/try_again"/>

</androidx.constraintlayout.widget.ConstraintLayout>